Fix card menu layout display on small screens

--- a/ontimize/layouts/card-menu-layout/o-card-menu-layout.component.scss
+++ b/ontimize/layouts/card-menu-layout/o-card-menu-layout.component.scss
@@ -1,11 +1,45 @@
 .o-menu-layout {
+  .o-card-menu-layout-bigscreen {
+    height: 100%;
+    margin: 0;
+    min-height: 100%;
+    min-width: 100%;
+    width: 100%;
+    max-height: 100%;
+
+    .o-card-menu-item {
+      margin: auto;
+    }
+  }
+
+  .o-card-menu-layout-smallscreen {
+    flex: 1 1 auto;
+    box-sizing: border-box;
+
+    .o-card-menu-item {
+      margin: 16px 0;
+    }
+  }
+
   .o-card-menu-item {
-    width: 290px;
+    flex-grow: 1;
+    min-width: 250px;
+    max-width: 290px;
     height: 45%;
-    margin: 16px 0;
+    min-height: 180px;
+    max-height: 250px;
 
     &.compact {
       height: 30%;
     }
   }
+}
+
+.o-menu-layout.o-card-menu-layout-bigscreen {
+  height: 100%;
+  margin: 0;
+  min-height: 100%;
+  min-width: 100%;
+  width: 100%;
+  max-height: 100%;
 }
